--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ body {
 /* Final do site */
 
 .hero-slider{
+    background-color: #f6ff00;
+    margin-top: 150px;
     width: 100%;
     height: 50vh;
     overflow: hidden;
@@ -184,10 +186,10 @@ header {
     height: 70px;
 }
 #logo img {
-    margin-top: -40px;
-    margin-left: -25px;
-    width: 220px;
-    height: 150px;
+    margin-top: 100px;
+    margin-left: -35px;
+    width: 50px;
+    height: 50px;
 }
 #check {
     display: none;
@@ -288,7 +290,7 @@ main h2 {
     margin-left: 3px;
 }
 .foto {
-    background-image: url(img/userpic.jpg);
+    background-image: url(img/logob.png);
     background-size: 50vh;
     margin-top: 10px;
     margin-left: -100px;
@@ -314,11 +316,11 @@ main h2 {
 
 /* LOCALIZAÇÃO FAIXA AZUL  */
 #null {
-    background-color: #022031;
+    background-color:  #f9ff45;
     text-shadow: 1px 1px 0px black;
     font-family: 'Geosanslight', 'sans serif';
     padding: 10px 10px;
-    color: white;
+    color: black;
     width: cover;
     height: 95px;
     text-align: center;
@@ -334,13 +336,14 @@ main h2 {
 
 .localy {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    margin: 0 auto;
+    justify-content: center;
 }
 .map {
     background-color: #fff;
     box-shadow: 3px 2px 10px rgba(41, 125, 148, 0.6);
     text-align: center;
+    justify-content: center;
 }
 /* CONTATO REAL */
 #Contato1 {
@@ -551,13 +554,13 @@ footer {
         transition: color 0.3s;
     }
     nav ul li a:hover {
-        color: #06A1B4;
+        color: #f6ff00;
     }
     #logo img {
-        margin-top: -60px;
-        margin-left: -45px;
-        width: 310px;
-        height: 190px;
+        margin-top: -20px;
+        margin-left: -10px;
+        width: 150px;
+        height: 150px;
     }
     .hero-slider .carousel-cell{
         width: 70vh;
@@ -583,8 +586,8 @@ footer {
     }
     .foto {
         position: relative;
-        left: -400px;
-        width: 110vh;
+        left: -450px;
+        width: 55vh;
         border-radius: 15px 15px 15px 15px;
         transition: transform 1s ease-in-out;
     }
@@ -624,9 +627,9 @@ footer {
         height: 300px;
     }
     main #logobg {
-        margin-top: 80px;
-        width: 50vh;
-        height: 30vh;
+        margin-top: 300px;
+        width: 60vh;
+        height: 60vh;
     }
     .h1 {
         position: static;
@@ -641,12 +644,25 @@ footer {
     .destaqueSobre {
         font-size: 1.5em;
     }
-
+    .destaqueSobre1 {
+        font-family: "GeosansLight", sans-serif;
+        padding: 100px;
+        text-align: center;
+        height: 300px;
+        font-size: 1.5em;
+    }
     .textoSobre {
         font-size: 1em;
     }
+    .textoSobre1 {
+        margin-top: 50px;
+        font-size: 1.2em;
+    }
     #null h2{
         font-size: 2em;
+    }
+    #null h3{
+        font-size: 1.6em;
     }
     /* LOCALIZAÇÃO DOS MAPAS */
     #local {
@@ -656,8 +672,9 @@ footer {
     .localy {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        margin: 20px 150px 20px 150px;
+        justify-content: center;
+        padding-top: 30px;
+        padding-bottom: 50px;
     }
     .map {
         background-color: #fff;
@@ -671,22 +688,22 @@ footer {
         justify-content: space-between;
         width: 100%;
         margin-left: -30px;
+        padding: 50px;
+    }
+    .contact {
+        display: flex;
+        flex-direction: row;
+        justify-items: center;
+        justify-content: center;
+    }
+    #Contato1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
     }
     .textoContato {
         margin-top: -5px;
         padding-top: 10px;
-        text-align: center;
-        font-size: small;
-        color: white;
-        text-shadow: 1px 1px 2px #000000;
-        justify-content: center;
-    }
-    .textoContato1 a {
-        text-decoration: none;
-        color: white;
-    }
-    .textoContato1 {
-        padding-top: 100px;
         text-align: center;
         font-size: small;
         color: white;
