--- a/style.css
+++ b/style.css
@@ -300,6 +300,17 @@ main h2 {
     left: -360px; /* Começa fora da tela à esquerda */
     transition: transform 1s ease, left 1s ease
 }
+.foto1 {
+    background-image: url(img/CAPA.jpg);
+    background-size: 50vh;
+    margin-top: 10px;
+    margin-left: 100px;
+    height: 550px;
+    width: 380px;
+    position: relative;
+    left: -360px; /* Começa fora da tela à esquerda */
+    transition: transform 1s ease, left 1s ease
+}
 .destaqueSobre {
     font-family: 'Augustus', 'sans serif';
     color: #022031;
@@ -591,6 +602,16 @@ footer {
         border-radius: 15px 15px 15px 15px;
         transition: transform 1s ease-in-out;
     }
+    .foto1 {
+        position: relative;
+        margin-top: 50px;
+        margin-left: 1050px;
+        margin-bottom: -75px;
+        height: 70vh;
+        width: 50vh;
+        border-radius: 15px 15px 15px 15px;
+        transition: transform 1s ease-in-out;
+    }
     /* #container {
         position: relative;
         width: 100%;
@@ -692,9 +713,10 @@ footer {
     }
     .contact {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-items: center;
         justify-content: center;
+        margin-bottom: 20px;
     }
     #Contato1 {
         display: flex;
@@ -709,5 +731,10 @@ footer {
         color: white;
         text-shadow: 1px 1px 2px #000000;
         justify-content: space-between;
+    }
+    #Creditos {
+        margin-top: 120px;
+        margin-bottom: -25px;
+        justify-content: bottom;
     }
 }
