--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ body {
 /* Final do site */
 
 .hero-slider{
-    background-color: #f6ff00;
-    margin-top: 150px;
+    background-color: #000000;
+    margin-top: -100px;
     width: 100%;
     height: 50vh;
     overflow: hidden;
@@ -52,13 +52,13 @@ body {
 }
 
 .hero-slider .carousel-cell .info-container{
-    color: #fff;
+    color: #ffffff;
     position: relative;
 }
 
 .hero-slider .carousel-cell .info-container .header{
-    font-family: "Poppins", sans-serif;
-    font-size: 30px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 25px;
     font-weight: 400;
     font-style: italic;
     letter-spacing: 4px;
@@ -67,10 +67,10 @@ body {
 }
 
 .hero-slider .carousel-cell .info-container .text{
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 200;
     font-style: normal;
-    font-size: 40px;
+    font-size: 35px;
     /* font-weight: bold; */
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -103,6 +103,8 @@ body {
     width: 55px;
     height: 55px;
     background: transparent;
+    margin-left: -20px;
+    margin-right: -20px;
 }
 
 .hero-slider .flickity-prev-next-button .arrow{
@@ -114,6 +116,7 @@ body {
 }
 
 .hero-slider .flickity-page-dots .dot{
+    margin-bottom: -50px;
     width: 40px;
     height: 10px;
     background: rgba(255, 255, 255, 0.4);
@@ -247,15 +250,16 @@ nav ul li a {
     color: white;
 }
 /* Destaque */
+.line {
+    top: 20px;
+    width: 100%;
+    height: 3px;
+    background: linear-gradient(to top left, gold, orange, chocolate);
+}
 main {
-    margin-top: -90px;
-    height: 40vh;
-    /* background-color: #fff; */
-    /* background-image: url(img/background.jpg); */
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgb(255, 255, 255, 0.5));
-    /* background-attachment: fixed;
-    background-size: 100px no-repeat; */
-    color: white;
+    margin-top: 150px;
+    height: 100%;
+    background-color: #000000;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -290,8 +294,8 @@ main h2 {
     font-size: 1.5em;
 }
 #Sobre h3 {
-    text-shadow: #022031;
-    color: #297D94;
+    text-shadow: 1px 2px black;
+    color:  #ffa600;
     font-size: 1em;
     margin-left: 3px;
 }
@@ -394,6 +398,32 @@ main h2 {
     width: cover;
     padding: 10px;
     background-color: #000000;
+}
+.textoContato a {
+    /* Define o estilo padrão do texto */
+    color: rgb(255, 255, 255); /* Cor do texto */
+    text-decoration: none; /* Remove o sublinhado padrão dos links */
+    position: relative; /* Define a posição como relativa para que a sombra possa ser posicionada */
+}
+
+.textoContato a:hover {
+    /* Define o estilo do texto quando destacado */
+    animation: gradientText 2s infinite alternate; /* Aplica a animação de gradiente */
+}
+
+@keyframes gradientText {
+    0% {
+        color: rgb(255, 255, 255); /* Cor inicial do texto */
+        text-shadow: 0 0 2px rgb(252, 244, 200), 0 0 5px rgb(246, 209, 140), 0 0 10px rgb(211, 132, 75); /* Sombra de texto com efeito degradê */
+    }
+    50% {
+        color: gold; /* Cor inicial do texto */
+        text-shadow: 0 0 5px gold, 0 0 10px orange, 0 0 20px chocolate; /* Sombra de texto com efeito degradê */
+    }
+    100% {
+        color: orange; /* Cor final do texto */
+        text-shadow: 0 0 10px chocolate, 0 0 20px orange, 0 0 30px gold; /* Sombra de texto com efeito degradê */
+    }
 }
 .Flex2 {
     display: flex;
@@ -538,7 +568,7 @@ footer {
 
     /* Cabeçalho */
     header {
-        height: 75px;
+        height: 68px;
         opacity: 0.99;
     }
     .FlexMenu {
@@ -580,12 +610,14 @@ footer {
         height: 150px;
     }
     .hero-slider .carousel-cell{
+        margin-top: 0px;
         width: 70vh;
         height: 50vh;
-        font-family: 'GeosansLight', sans-serif;
+        font-family: 'Poppins', sans-serif;
     }
      /* Sobre nós */
     #Sobre {
+        height: 650px;
         display: flex;
         flex-direction: row;
         background-color: white;
@@ -647,16 +679,17 @@ footer {
     }
      /* Destaque */
      main {
-        background-repeat: no-repeat;
-        background-size: cover;
-        margin-top: -90px;
-        width: 100%;
-        height: 300px;
+        margin-top: 0px;
+        height: 40vh;
+        background-color: #000000;
+        /* background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5)); */
+        justify-content: center;
+        text-align: center;
     }
     main #logobg {
-        margin-top: 300px;
-        width: 60vh;
-        height: 60vh;
+        margin-top: -50px;
+        width: 50vh;
+        height: 50vh;
     }
     .h1 {
         position: static;
@@ -669,6 +702,7 @@ footer {
         width: 390px;
     }
     .destaqueSobre {
+        color: #000000;
         font-family: "GeosansLight", sans-serif;
         font-size: 23px;
         font-weight: 100;
@@ -683,10 +717,20 @@ footer {
         font-size: 1.5em;
     }
     .textoSobre {
-        font-size: 1.5em;
+        color: #000;
+        font-family: "GeosansLight", sans-serif;
+        right: -1000px;
+        height: 500px;
+        width: 1200px;
+        display: flex;
+        position: fixed;
+        justify-self: right;
+        text-align: center;
+        margin-top: -250px;
+        font-size: 1.8em;
     }
     .textoSobre1 {
-        margin-top: 50px;
+        margin-top: 20px;
         font-size: 1.2em;
     }
     #null h2{
@@ -709,7 +753,7 @@ footer {
     }
     .map {
         background-color: #fff;
-        box-shadow: 3px 2px 10px rgba(41, 125, 148, 0.6);
+        box-shadow: 3px 2px 10px #f6ff00;
         text-align: center;
     }
     /* CONTATOS */
@@ -717,7 +761,7 @@ footer {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 100%;
+        width: 96.8%;
         margin-left: -30px;
         padding: 50px;
     }
@@ -726,6 +770,7 @@ footer {
         flex-direction: column;
         justify-items: center;
         justify-content: center;
+        margin-right: 5px;
         margin-bottom: 20px;
     }
     #Contato1 {
@@ -735,6 +780,7 @@ footer {
     }
     .textoContato {
         margin-top: -5px;
+        margin-right: 40px;
         padding-top: 10px;
         text-align: center;
         font-size: small;
@@ -742,8 +788,15 @@ footer {
         text-shadow: 1px 1px 2px #000000;
         justify-content: space-between;
     }
+    .linebot {
+        margin-left: -10px; 
+        width: 198.5vh;
+        height: 3px;
+        background: linear-gradient(to top left, gold, orange, chocolate);
+    }
     #Creditos {
-        margin-top: 130px;
+        width: 97.8%;
+        margin-top: 100px;
         justify-content: bottom;
     }
 }
