--- a/style.css
+++ b/style.css
@@ -770,7 +770,7 @@ footer {
         flex-direction: column;
         justify-items: center;
         justify-content: center;
-        margin-right: 5px;
+        margin-right: -20px;
         margin-bottom: 20px;
     }
     #Contato1 {
@@ -780,23 +780,29 @@ footer {
     }
     .textoContato {
         margin-top: -5px;
-        margin-right: 40px;
-        padding-top: 10px;
+        padding-top: 5px;
         text-align: center;
         font-size: small;
         color: white;
-        text-shadow: 1px 1px 2px #000000;
-        justify-content: space-between;
-    }
+        justify-content: center;
+    }   
+    .textoContato #telefone ,#email{
+        margin-bottom: 10px;
+        margin-left: 30px;
+    }   
     .linebot {
-        margin-left: -10px; 
-        width: 198.5vh;
+        margin-left: -30px; 
+        width: 197.9vh;
         height: 3px;
         background: linear-gradient(to top left, gold, orange, chocolate);
     }
     #Creditos {
         width: 97.8%;
+        margin-right: -30px;
         margin-top: 100px;
         justify-content: bottom;
+    }
+    #Creditos, h3 {
+        margin-left: 25px;
     }
 }
