--- a/style.css
+++ b/style.css
@@ -708,6 +708,22 @@ footer {
     }
     #Cursos, h2{
         font-size: 1em;
+        justify-content: center;
+        align-items: center;
+    }
+    #Inscrever {
+        font-family: "Montserrat", sans-serif;
+        background: linear-gradient(to top left, gold, orange, rgb(255, 106, 0));
+        color: #fff;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 40px;
+        box-shadow: 1px 1px 5px #000;
+        font-size: 28px;
+        cursor: pointer;
+        margin-top: -100px;
+        margin-left: 803px;
+        margin-bottom: 50px;
     }
     .textoSobre {
         color: #000;
