--- a/style.css
+++ b/style.css
@@ -34,14 +34,14 @@ body {
 .hero-slider{
     background-color: #000000;
     margin-top: -100px;
-    width: 100%;
+    width: 100vh;
     height: 50vh;
     overflow: hidden;
     font-family: 'GeosansLight', sans-serif;
 }
 
 .hero-slider .carousel-cell{
-    width: 50vh;
+    width: 100vh;
     height: 50vh;
     background: no-repeat center/cover;
     display: flex;
@@ -418,7 +418,7 @@ body {
     .map {
         background-color: #000000;
         color: white;
-git */
+        /* box-shadow: 3px 2px 10px orange; */
         text-align: center;
         justify-content: center;
     }
@@ -634,8 +634,11 @@ git */
 
 /* Desktop */
 @media (min-width: 1200px) {
+    html {
+        min-width: 1200px;
+    }
     body {
-        background-color: whitesmoke;
+        background-color: rgb(255, 255, 255);
     }
     /* Layout */
     .container {
@@ -645,6 +648,7 @@ git */
     /* Cabeçalho */
     header {
         height: 68px;
+        width: 200vh;
         opacity: 0.99;
     }
     .FlexMenu {
@@ -685,22 +689,48 @@ git */
         width: 150px;
         height: 150px;
     }
+    .hero-slider{
+        background-color: #000000;
+        margin-top: -100px;
+        padding-left: -10px;
+        width: 100vw;
+        height: 50vh;
+        overflow: hidden;
+        font-family: 'GeosansLight', sans-serif;
+    }
+    
     .hero-slider .carousel-cell{
-        margin-top: 0px;
         width: 70vh;
         height: 50vh;
-        font-family: 'Poppins', sans-serif;
+        background: no-repeat center/cover;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    .hero-slider .carousel-cell .info-container{
+        color: #ffffff;
+        position: relative;
+    }
+    .line {
+        top: 20px;
+        width: 200vh;
+        height: 6.5px;
+        background: linear-gradient(to top left, gold, orange, chocolate);
     }
      /* Sobre nós */
     #Sobre {
+        min-width: 2000px;
+        width: 100vw;
         height: 650px;
         display: flex;
         flex-direction: row;
         background-color: white;
         padding: 10px 10px;
-        text-align: left;
-        justify-content: left;
-        align-items: left;
+        text-align: justify;
+        justify-content: center;
+        align-items: space-between;
     }
     .textoSobre {
         text-indent: center;
@@ -712,17 +742,27 @@ git */
     .foto {
         position: relative;
         left: -450px;
-        width: 55vh;
-        border-radius: 15px 15px 15px 15px;
+        width: 50vh;
         transition: transform 1s ease-in-out;
     }
-    .foto1 {
+    .linemid {
+        min-width: 100vw;
+        width: 1200px;
+        height: 5px;
+        background: linear-gradient(to top left, gold, orange, chocolate);
+    }
+    #Cursos {
+        min-width: 100vw;
+        height: 1500px;
+        text-align: justify;
+    }
+    .foto2 {
         position: relative;
         margin-top: 50px;
-        margin-left: 1050px;
+        margin-left: 50vw;
         margin-bottom: -75px;
-        height: 70vh;
-        width: 50vh;
+        height: 45vh;
+        width: 37vh;
         border-radius: 15px 15px 15px 15px;
         transition: transform 1s ease-in-out;
     }
@@ -754,9 +794,10 @@ git */
         align-items: center;
     }
      /* Destaque */
-     main {
+    main {
         margin-top: 0px;
         height: 40vh;
+        width: 200vh;
         background-color: #000000;
         /* background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5)); */
         justify-content: center;
@@ -798,7 +839,7 @@ git */
         font-size: 28px;
         cursor: pointer;
         margin-top: -100px;
-        margin-left: 803px;
+        margin-right: 70px;
         margin-bottom: 50px;
     }
     #Inscrever:hover {
@@ -818,8 +859,11 @@ git */
         font-size: 1.8em;
     }
     .textoSobre1 {
-        margin-top: 20px;
-        font-size: 1.2em;
+        margin-top: -50px;
+        font-size: 30px;
+    }
+    #null {
+        min-width: 100vw;
     }
     #null h2{
         font-size: 2em;
@@ -829,6 +873,8 @@ git */
     }
     /* LOCALIZAÇÃO DOS MAPAS */
     #LOCAL {
+        min-width: 100vw;
+        height: 600px;
         display: flex;
         background-color: #000;
     }
@@ -840,7 +886,13 @@ git */
         padding-top: 30px;
         padding-bottom: 50px;
     }
+    .maptitle {
+        margin-left: -30px;
+    }
     .map {
+        width: 450px;
+        height: 370px;
+        color: #000;
         background-color: #fff;
         margin-top: 15px;
         margin-bottom: -45x;
@@ -853,6 +905,7 @@ git */
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        min-width: 100vw;
         width: 96.8%;
         margin-left: -30px;
         padding-left: 50px;
@@ -869,8 +922,11 @@ git */
         margin-bottom: 20px;
     }
     #Contato1 {
+        padding-top: 90px;
+        margin-bottom: -170px;
         display: flex;
         flex-direction: row;
+        align-items: center;
         justify-content: space-around;
     }
     .textoContato {
@@ -887,23 +943,27 @@ git */
     }   
     .linebot {
         margin-left: -30px; 
-        width: 197.9vh;
+        min-width: 100vw;
+        width: 100vw;
         height: 3px;
         background: linear-gradient(to top left, gold, orange, chocolate);
     }
     .linebot2 {
+        margin-top: -150px;
         margin-left: -30px;
-        width: 200.5vh;
+        min-width: 100vw;
+        width: 100vw;
         height: 3px;
         background: linear-gradient(to top left, gold, orange, chocolate);
     }
     .linemid {
-        width: 200.5vh;
+        width: 100vw;
+        min-width: 100vw;
         height: 3px;
         background: linear-gradient(to top left, gold, orange, chocolate);
     }
     #Creditos {
-        width: 97.8%;
+        width: 100vw;
         margin-right: -30px;
         margin-top: 100px;
         justify-content: bottom;
