--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ body {
     }
     main {
         margin-top: 0px;
-        height: 310px;
+        height: 370px;
         background-color: #000000;
         display: flex;
         justify-content: center;
@@ -280,6 +280,7 @@ body {
         height: 46vh;
     }
     .hero-slider .carousel-cell {
+        top: -10px;
         width: 50vh;
         height: 50vh;
     }
@@ -287,6 +288,49 @@ body {
         margin-top: 25px;
         font-size: 23px;
     }
+    /* Serviço especializado */ 
+    #Servicos {
+        max-width: 100vw;
+        background-color: black;
+        color: white;
+        height: 190vh;
+        padding-top: 50px;
+        padding-left: 20px;
+        padding-right: 20px;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
+    .textoservicos {
+        max-width: 100vw;
+        justify-content: center;
+        align-items: center;
+        text-align: left;
+    }
+    .linemid1 {
+        max-width: 100vw;
+        width: 200.5vh;
+        height: 3px;
+        background: linear-gradient(to top left, gold, orange, chocolate);
+    }
+    .destaqueSobre3 {
+        max-width: 100vw;
+        font-family: 'Geosanslight', 'sans serif';
+        font-size: 1em;
+        text-align: center;
+        justify-content: center;
+    }
+    .textoSobre3 {
+        max-width: 80vw;
+        margin: 0 auto;
+        font-family: 'Geosanslight', 'sans serif';
+        font-size: 20px;
+        width: 80vh;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
+
     /* Sobre */
 
     #Sobre {
@@ -294,7 +338,7 @@ body {
         /* background-position-x: center;
         background-size: cover; */
         padding: 10px;
-        max-width: 430px;
+        max-width: 100vw;
         text-align: center;
         justify-content: center;
     }
@@ -332,9 +376,20 @@ body {
         left: -360px; /* Começa fora da tela à esquerda */
         transition: transform 1s ease, left 1s ease
     }
+    .foto3 {
+        background-image: url(img/afiacao.jpg);
+        background-size: 90vw;
+        background-repeat: no-repeat;
+        height: 100vh;
+        position: relative;
+        cursor: pointer;
+        right: 360px; /* Começa fora da tela à esquerda */
+        transition: transform 1s ease, left 1s ease
+    }
     #Cursos {
         padding: 10px;
-        max-width: 430px;
+        max-width: 100vw;
+        max-height: 170vh;
     }
     .foto2 {
         background-image: url(img/CAPA.jpg);
@@ -350,12 +405,14 @@ body {
         transition: transform 1s ease, left 1s ease
     }
     .destaqueSobre {
+        max-width: 90vw;
         font-family: 'Augustus', 'sans serif';
         color: #022031;
         /* text-shadow: 1px 1px 3px black; */
     } 
     .textoSobre {
         /* text-shadow: 1px 1px 3px #000000; */
+        max-width: 90vw;
         margin-top: -65px;
         color: #022031;
         padding: 10px 10px 10px 10px;
@@ -363,18 +420,22 @@ body {
         justify-content: center;
     } 
     .linemid {
-        max-width: 430px;
+        max-width: 100vw;
         width: 200.5vh;
         height: 5px;
         background: linear-gradient(to top left, gold, orange, chocolate);
     }
     .destaqueSobre1 {
+        max-width: 90vw;
+        margin-left: 12px;
         font-family: 'Geosanslight', 'sans serif';
         font-size: 1em;
         text-align: center;
         justify-content: center;
     }
     .textoSobre1 {
+        max-width: 90vw;
+        margin-left: 12px;
         font-family: 'Geosanslight', 'sans serif';
         font-size: 20px;
         text-align: center;
@@ -394,6 +455,7 @@ body {
     }
     /* LOCALIZAÇÃO FAIXA AZUL  */
     #null {
+        max-width: 100vw;
         background: linear-gradient(to bottom left, chocolate, orange, gold);
         text-shadow: 3px 3px 10px rgb(0, 0, 0);
         font-family: 'Geosanslight', 'sans serif';
@@ -640,9 +702,11 @@ body {
 /* Desktop */
 @media (min-width: 1200px) {
     html {
-        min-width: 1200px;
+        margin-right: 150px;
+        max-width: 100vw;
     }
     body {
+        max-width: 100vw;
         background-color: rgb(255, 255, 255);
     }
     /* Layout */
@@ -652,7 +716,7 @@ body {
 
     /* Cabeçalho */
     header {
-        height: 68px;
+        height: 73px;
         width: 200vh;
         opacity: 0.99;
     }
@@ -689,10 +753,23 @@ body {
         color: #f6ff00;
     }
     #logo img {
-        margin-top: -20px;
+        margin-top: -15px;
         margin-left: -10px;
         width: 150px;
         height: 150px;
+    }
+    #logo a:hover {
+        position: absolute;
+        animation: gradientText 1.5s infinite alternate; /* Aplica a animação de gradiente */
+    }
+
+    @keyframes gradientText {
+        0% {
+            filter: drop-shadow(5px 0 10px gold); /* Sombra de texto com efeito degradê */
+        }
+        100% {
+            filter: drop-shadow(5px 10px 50px gold);/* Sombra de texto com efeito degradê */
+        }
     }
     .hero-slider{
         background-color: #000000;
@@ -718,6 +795,10 @@ body {
         color: #ffffff;
         position: relative;
     }
+    .hero-slider .carousel-cell .info-container .text {
+        margin-top: -5px;
+        font-size: 35px;
+    }
     .line {
         top: 20px;
         width: 200vh;
@@ -726,7 +807,7 @@ body {
     }
      /* Sobre nós */
     #Sobre {
-        min-width: 2000px;
+        max-width: 100vw;
         width: 100vw;
         height: 650px;
         display: flex;
@@ -736,6 +817,9 @@ body {
         text-align: justify;
         justify-content: center;
         align-items: space-between;
+    }
+    .Container .Row {
+        max-width: 100vw;
     }
     .textoSobre {
         text-indent: center;
@@ -757,6 +841,7 @@ body {
         background: linear-gradient(to top left, gold, orange, chocolate);
     }
     #Cursos {
+        max-width: 100vw;
         min-width: 100vw;
         height: 1500px;
         text-align: justify;
@@ -802,7 +887,7 @@ body {
     main {
         margin-top: 0px;
         height: 40vh;
-        width: 200vh;
+        width: 100vw;
         background-color: #000000;
         /* background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5)); */
         justify-content: center;
@@ -813,6 +898,65 @@ body {
         width: 50vh;
         height: 50vh;
     }
+    #logobg:hover {
+        animation: gradientText 2s forwards;  /* Aplica a animação de gradiente */
+    }
+
+    @keyframes gradientText {
+        0% {
+            filter: drop-shadow(5px 0 10px orange);/* Sombra de texto com efeito degradê */
+        }
+        100% {
+            filter: drop-shadow(15px 0 100px gold);/* Sombra de texto com efeito degradê */
+        }
+    }
+        /* Serviço especializado */ 
+        .foto3 {
+            background-size: 100%;
+            width: 50%;
+            height: 50%;
+            left: 1000px;
+        }
+        #Servicos {
+            background-color: black;
+            color: white;
+            max-height: 120vh;
+            max-width: 100vw;
+            min-width: 98vw;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+        }
+        .destaqueserv {
+            margin-left: 150px;
+            text-align: center;
+            width: 1200px;
+        }
+        .textoservicos {
+            text-align: center;
+        }
+        .linemid1 {
+            max-width: 100vw;
+            width: 200.5vh;
+            height: 3px;
+            background: linear-gradient(to top left, gold, orange, chocolate);
+        }
+        .destaqueSobre3 {
+            margin-left: 800px;
+            font-family: 'Geosanslight', 'sans serif';
+            font-size: 1.5em;
+            text-align: center;
+            justify-content: center;
+        }
+        .textoSobre3 {
+            font-family: 'Geosanslight', 'sans serif';
+            font-size: 23px;
+            width: 80vh;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+        }
+    
     .destaqueSobre {
         color: #000000;
         font-family: "GeosansLight", sans-serif;
@@ -868,7 +1012,8 @@ body {
         font-size: 30px;
     }
     #null {
-        min-width: 100vw;
+        min-width: 99vw;
+        max-width: 100vw;
     }
     #null h2{
         font-size: 2em;
@@ -907,11 +1052,11 @@ body {
     }
     /* CONTATOS */
     footer {
+        max-width: 100vw;
+        min-width: 96.8vw;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        min-width: 100vw;
-        width: 96.8%;
         margin-left: -30px;
         padding-left: 50px;
         padding-right: 50px;
@@ -927,6 +1072,7 @@ body {
         margin-bottom: 20px;
     }
     #Contato1 {
+        max-width: 100vw;
         padding-top: 90px;
         margin-bottom: -170px;
         display: flex;
@@ -947,7 +1093,7 @@ body {
         margin-left: 30px;
     }   
     .linebot {
-        margin-left: -30px; 
+        margin-left: -35px; 
         min-width: 100vw;
         width: 100vw;
         height: 3px;
@@ -968,8 +1114,8 @@ body {
         background: linear-gradient(to top left, gold, orange, chocolate);
     }
     #Creditos {
+        max-width: 97vw;
         width: 100vw;
-        margin-right: -30px;
         margin-top: 100px;
         justify-content: bottom;
     }
