--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ body {
         max-width: 100vw;
         background-color: black;
         color: white;
-        height: 190vh;
+        height: 180vh;
         padding-top: 50px;
         padding-left: 20px;
         padding-right: 20px;
@@ -367,11 +367,10 @@ body {
     }
     .foto1 {
         background-image: url(img/CAPA.jpg);
-        background-size: 50vh;
         margin-top: 10px;
         margin-left: 100px;
-        height: 550px;
-        width: 380px;
+        height: 100vh;
+        width: 100vh;
         position: relative;
         left: -360px; /* Começa fora da tela à esquerda */
         transition: transform 1s ease, left 1s ease
@@ -384,12 +383,34 @@ body {
         position: relative;
         cursor: pointer;
         right: 360px; /* Começa fora da tela à esquerda */
-        transition: transform 1s ease, left 1s ease
+        transition: transform 1s ease, left 1s ease;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #botaoservico {
+        margin-top: 400px;
+        width: 100px;
+        height: 15px;
+        padding: 10px 10px;
+        background: transparent;
+        border: 1px solid #fff;
+        color: #fff;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-family: "Geosanslight", sans-serif;
+        font-weight: 200;
+        font-style: normal;
+        font-size: 12px;
+        letter-spacing: 3px;
+        border-radius: 12px;
+        cursor: pointer;
+        transition: all 0.3s ease;
     }
     #Cursos {
         padding: 10px;
         max-width: 100vw;
-        max-height: 170vh;
+        max-height: 190vh;
     }
     .foto2 {
         background-image: url(img/CAPA.jpg);
@@ -451,7 +472,7 @@ body {
         box-shadow: 1px 1px 5px #000;
         font-size: 20px;
         cursor: pointer;
-        margin: 0px 20px 20px 115px;
+        margin: 0px 20px 20px 105px;
     }
     /* LOCALIZAÇÃO FAIXA AZUL  */
     #null {
@@ -912,17 +933,39 @@ body {
     }
         /* Serviço especializado */ 
         .foto3 {
+            display: flex;
+            position: relative;
             background-size: 100%;
-            width: 50%;
-            height: 50%;
-            left: 1000px;
+            width: 60%;
+            height: 60%;
+            left: 50px;
+        }
+        .foto3:before .foto3::after{
+            content: '';
+            position: absolute;
+            z-index: -1;
+            width: calc(100% + 30px);
+            height: calc(100% + 30px);
+            background: linear-gradient(90deg, black, white);
+            background-size: 100%;
+            border-radius: 10px;
+        }
+        .foto3::after {
+            filter: blur(50px);
         }
         #Servicos {
+            background-image: url(img/alicatebg.png);
+            background-size: 150vh;
+            background-repeat: no-repeat;
+            background-position-x: right;
+            padding-top: 50px;
+            padding-left: -55px;
+            margin-bottom: -100px;
             background-color: black;
             color: white;
-            max-height: 120vh;
-            max-width: 100vw;
-            min-width: 98vw;
+            max-height: 110vh;
+            max-width: 97.8vw;
+            min-width: 97.8vw;
             align-items: center;
             text-align: center;
             justify-content: center;
@@ -942,7 +985,9 @@ body {
             background: linear-gradient(to top left, gold, orange, chocolate);
         }
         .destaqueSobre3 {
+            margin-top: 185px;
             margin-left: 800px;
+            width: 60vh;
             font-family: 'Geosanslight', 'sans serif';
             font-size: 1.5em;
             text-align: center;
@@ -956,7 +1001,46 @@ body {
             text-align: center;
             justify-content: center;
         }
-    
+        #botaoservico {
+            box-sizing: border-box;
+            margin-top: 500px;
+            margin-left: 15px;
+            width: 130px;
+            height: 20px;
+            padding: 5px 19px 19px 19px;
+            background: transparent;
+            border: 1px solid #fff;
+            color: #fff;
+            font-family: "Geosanslight", sans-serif;
+            font-weight: 200;
+            font-style: normal;
+            font-size: 12px;
+            letter-spacing: 3px;
+            border-radius: 12px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+        #botaoservico:hover{
+            background: #fff;
+            color: #000;
+            font-weight: bold;
+            filter: drop-shadow(15px 0px 100px gold);
+            animation: animabtn 1.5s linear infinite;
+            opacity: 1;
+        }
+        @keyframes animabtn {
+            0% {
+                transform: scale(1);
+                opacity: 0;
+            }
+            50% {
+                opacity: 1;
+            }
+            100% {
+                transform: scale(1.2);
+                opacity: 0;
+            }
+        }
     .destaqueSobre {
         color: #000000;
         font-family: "GeosansLight", sans-serif;
