--- a/style.css
+++ b/style.css
@@ -996,15 +996,16 @@ body {
      /* Destaque */
     main {
         margin-top: 0px;
+        padding: 10px 10px 50px 10px;
         height: 40vh;
-        width: 99.8vw;
+        width: 100vw;
         background-color: #000000;
         /* background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5)); */
         justify-content: center;
         text-align: center;
     }
     main #logobg {
-        margin-top: -50px;
+        margin-top: 0px;
         width: 50vh;
         height: 50vh;
     }
@@ -1047,9 +1048,9 @@ body {
             background-size: 150vh;
             background-repeat: no-repeat;
             background-position-x: right;
-            padding-top: 50px;
-            padding-left: -55px;
-            padding-bottom: 50px;
+            padding-top: 0px;
+            padding-left: 100px;
+            padding-bottom: 150px;
             background-color: black;
             color: white;
             max-height: 105vh;
@@ -1203,7 +1204,7 @@ body {
         font-size: 28px;
         cursor: pointer;
         margin-top: -100px;
-        margin-right: 75px;
+        margin-right: 50px;
         margin-bottom: 50px;
     }
     #Inscrever:hover {
@@ -1249,7 +1250,7 @@ body {
         justify-content: center;
         padding-top: 30px;
         padding-bottom: 50px;
-        margin: 20px 600px 20px 700px;
+        margin: 20px 600px 20px 680px;
     }
     .map {
         width: 100%;
@@ -1312,7 +1313,7 @@ body {
     }
     .linemid {
         max-width: 100vw;
-        height: 50px;
+        height: 5px;
         background: linear-gradient(to top left, gold, orange, chocolate);
     }
     #Creditos {
