--- a/style.css
+++ b/style.css
@@ -293,8 +293,8 @@ body {
         max-width: 100vw;
         background-color: black;
         color: white;
-        height: 90%;
-        padding: 50px 20px 100px 20px;
+        height: 100%;
+        padding: 50px 20px 390px 20px;
         align-items: center;
         text-align: center;
         justify-content: center;
@@ -356,19 +356,19 @@ body {
         background-image: url(img/logob.png);
         background-size: 45vh;
         margin: 0 auto;
-        height: 350px;
-        width: 380px;
+        height: 300px;
+        width: 400px;
         position: relative;
         left: -360px; /* Começa fora da tela à esquerda */
         transition: transform 1s ease, left 1s ease
     }
     .foto1 {
         background-image: url(img/CAPA.jpg);
-        margin-top: 10px;
+        background-size: 100vh;
         margin-left: 100px;
         height: 100vh;
         width: 100vh;
-        position: relative;
+        position: absolute;
         left: -360px; /* Começa fora da tela à esquerda */
         transition: transform 1s ease, left 1s ease
     }
@@ -438,7 +438,7 @@ body {
     }
     #Inscrever2 {
         box-sizing: border-box;
-        margin-top: 390px;
+        margin-top: 375px;
         margin-left: 25px;
         width: 200px;
         height: 30px;
@@ -525,7 +525,7 @@ body {
     }
     .textoSobre1 {
         max-width: 90vw;
-        padding-top: 70px;
+        padding-top: 120px;
         margin: 0 auto;
         font-family: 'Geosanslight', 'sans serif';
         font-size: 25px;
@@ -536,13 +536,13 @@ body {
         font-family: "Montserrat", sans-serif;
         background: linear-gradient(to top left, gold, orange, rgb(255, 106, 0));
         color: #fff;
-        padding: 10px 20px;
+        padding: 10px 50px;
         border: none;
         border-radius: 40px;
         box-shadow: 1px 1px 5px #000;
         font-size: 20px;
         cursor: pointer;
-        margin: 0px 20px 20px 115px;
+        margin: 0px 20px 20px 65px;
     }
     /* LOCALIZAÇÃO FAIXA AZUL  */
     #null {
@@ -1138,8 +1138,8 @@ body {
     #Inscrever2 {
         box-sizing: border-box;
         margin-top: 570px;
-        margin-left: 100px;
-        width: 200px;
+        margin-left: 50px;
+        width: 300px;
         height: 30px;
         padding: 5px 19px 19px 19px;
         background: transparent;
@@ -1210,7 +1210,7 @@ body {
         font-size: 1.8em;
     }
     .textoSobre1 {
-        margin-top: 0px;
+        margin-top: -150px;
         margin-left: 120px;
         font-size: 33px;
         width: 80vw;
